--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 # test
-.js
-.map
+*.js
+*.map
  No newline at end of file
