--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name"    : "atom-sample",
   "version" : "0.1.0",
+  "description": "test",
   "dependencies": {
 		"mime": "latest",
 		"cson": "latest",
