--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
+min
 # test
 *.min.*
 *.js
