--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 # myconfig
-min
-*.min.js
+min*
+*.min.*
 *.js
 *.map
