--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"socket.io": "1.x",
     "ftp": "latest",
     "readline": "latest",
-    "jsdom": "latest"
+    "jsdom": "latest",
+    "csv-to-array": "latest"
   },
   "main"    : "Browser.js",
 	"comment"	: "atom-shell version 0.21.2"
