add memo, change win10 from win7

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 # myconfig
+*.exe
 ignore_data
 .sass-cache
 *.map
