--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "nodemon": "latest",
     "babel": "latest"
   },
-  "main"    : "Browser.js",
+  "main"    : "Browser2.js",
 	"comment"	: "nothing"
 }
